# OpenGlLearning

./: .gitignore  LearningOpenGl.sln  LearningOpenGl.vcxproj  LearningOpenGl.vcxproj.filters  Part1Vertice.glsl  README.md  我对齐次坐标的一些理解.md  笔记.md
Multimedia/: FFmpeg笔记.md
include/: Part1.h
include/Program/: shader.h
include/common/: TextureSample.h  base.h  camera.h  gl_common.h
include/glad/: glad.h
include/toolkit/: bufferq.h
include/transform/: 2d.h
libs/glfw-3.3.8-source/docs/: extra.css  extra.css.map
resources/: ee.JPG__
shaders/: texture-3d.frag  texture-3d.vert  texture-sample.frag  texture-sample.vert
shaders/media/: media.frag  media.vert
shaders/part1/: part1.vert
shaders/transform/: 2d.frag  2d.vert
src/: CMakeLists.txt  LearningWindow.cpp  Part1.cpp  ff-design.md  ffmpeg.md  glad.c  main.cxx
src/Program/: shader.cpp
src/common/: TextureSample.cpp  TextureSample.h  TextureSample3D.cpp  gl_common.cpp
src/config/: config.h.in
src/media/: media.cpp  simplestFFmpeg.cpp  simplestFFmpeg.h  vedioFrame.cpp
src/media/include/: media.h
src/practice/: Part1.cpp
src/toolkit/include/: bufferq.h
src/transform/: 2d.cxx
